[FIX] sidebar z-index

--- a/assets/css/cartSidebar.scss
+++ b/assets/css/cartSidebar.scss
@@ -100,13 +100,10 @@
     }
   }
   
-  ::v-deep .sf-overlay {
-    z-index: 60;
-  }
+
   
   ::v-deep .sf-sidebar {
     &__aside {
-      z-index: 61;
       width: 434px;
       @include for-mobile {
         width: 100%;
